# automacao_casa

./: .gitignore  config.py  pyproject.toml
src/gateway/: midway.py
src/recebimento/: mensagem.py  mensagem_recebida.py
src/resposta/: mensagem_resposta.py
tests/: test_midway.py  test_recebimento_mensagem.py
